--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,24 @@
     <name>shields</name>
     <properties>
         <assertj.version>3.0.0</assertj.version>
-        <source.version>1.8</source.version>
-        <junit.version>4.12</junit.version>
+        <commons-cle.version>1.3</commons-cle.version>
         <compiler.version>3.2</compiler.version>
-        <jetty.version>9.0.2.v20130417</jetty.version>
         <contracts.version>1.6.7</contracts.version>
+        <jetty.version>9.0.2.v20130417</jetty.version>
+        <junit.version>4.12</junit.version>
+        <source.version>1.8</source.version>
+        <spark.version>2.2</spark.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.2</version>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>${commons-cle.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
