--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk:
 - oraclejdk8
 env:
 - TERM=dumb
+after_success:
+  - gradlew jacocoTestReport coveralls
 deploy:
   provider: heroku
   api_key:
