--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 jdk:
-- oraclejdk8
+  - oraclejdk8
 env:
-- TERM=dumb
+  - TERM=dumb
 after_success:
-  - gradlew jacocoTestReport coveralls
+  - ./gradlew jacocoTestReport coveralls
 deploy:
   provider: heroku
   api_key:
