--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ repositories {
 
 dependencies {
     compile 'com.sparkjava:spark-core:2.2',
-            'commons-cli:commons-cli:1.3'
+            'commons-cli:commons-cli:1.3',
+            'com.googlecode.json-simple:json-simple:1.1.1'
     testCompile 'junit:junit:4.12',
             'org.assertj:assertj-core:3.0.0',
             'com.github.nwillc:contracts:1.6.7',
