--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ buildscript {
 }
 
 plugins {
+    id "war"
     id "java"
-    id "com.github.kt3k.coveralls" version "2.0.1"
     id "com.github.nwillc.vplugin" version "1.2.1"
 }
 
@@ -48,7 +48,7 @@ archivesBaseName = "shields"
 version = "1.1"
 targetCompatibility = "1.8"
 sourceCompatibility = "1.8"
-
+war.archiveName = "ROOT.war"
 
 jacocoTestReport {
     reports {
@@ -81,3 +81,7 @@ task stage(type: Copy) {
 }
 
 stage.dependsOn build
+
+war {
+    webXml = file('src/web.xml') // copies a file to WEB-INF/web.xml
+}
