--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
+sudo: required
 language: java
 jdk:
   - oraclejdk8
 env:
   - TERM=dumb
+before_install:
+  - sudo pip install codecov
+after_success:
+  - ./gradlew jacocoTestReport
+  - codecov
 deploy:
   provider: openshift
   user: nwillc@gmail.com
