--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
-sudo: required
 language: java
 jdk:
   - oraclejdk8
 env:
   - TERM=dumb
 before_install:
-  - sudo pip install codecov
+  - pip install --user codecov
 after_success:
   - ./gradlew jacocoTestReport
-  - codecov
 deploy:
   provider: openshift
   user: nwillc@gmail.com
