--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
-sudo: required
 language: java
 jdk:
   - oraclejdk8
 env:
   - TERM=dumb
-before_install:
-  - sudo pip install codecov
 after_success:
   - ./gradlew jacocoTestReport
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
 deploy:
   provider: openshift
   user: nwillc@gmail.com
