--- a/build.gradle
+++ b/build.gradle
@@ -51,12 +51,20 @@ sourceCompatibility = "1.8"
 
 jacocoTestReport {
     reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
+        xml.enabled = true
         html.enabled = true
+    }
+
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['**/Shields**'])
+        })
     }
 }
 
 test {
+
     beforeTest { descriptor ->
         logger.lifecycle("\tRunning " + descriptor.className + "." + descriptor.name)
     }
