--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -4,6 +4,6 @@ export GRADLE_USER_HOME=${OPENSHIFT_DATA_DIR}/gradle
 export JAVA_HOME=/etc/alternatives/java_sdk_1.8.0
 export PATH=${JAVA_HOME}/bin:${PATH}
  
-cd $OPENSHIFT_REPO_DIR
+cd ${OPENSHIFT_REPO_DIR}
  
 ./gradlew -q stage -x test
