--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+
+
 /*
  * Copyright (c) 2015, nwillc@gmail.com
  *
@@ -25,6 +27,7 @@ buildscript {
 plugins {
     id "java"
     id "com.github.nwillc.vplugin" version "1.2.4"
+    id "com.github.nwillc.buildinfo" version "0.0.2"
 }
 
 repositories {
@@ -88,3 +91,4 @@ task stage(type: Copy) {
 }
 
 stage.dependsOn build
+processResources.dependsOn buildInfo
