--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ plugins {
 }
 
 repositories {
+    jcenter()
     mavenLocal()
     mavenCentral()
 }
@@ -40,7 +41,7 @@ dependencies {
             'commons-cli:commons-cli:1.3'
     testCompile 'junit:junit:4.12',
             'org.assertj:assertj-core:3.3.0',
-            'com.github.nwillc:contracts:1.7.1',
+            'com.github.nwillc:jdk_contract_tests:1.7.3',
             'org.mockito:mockito-core:2.0.41-beta'
 }
 
