--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ buildscript {
         mavenCentral()
         jcenter()
     }
+    dependencies {
+        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
+    }
 }
 
 plugins {
@@ -38,18 +41,21 @@ repositories {
 
 dependencies {
     compile 'com.sparkjava:spark-core:2.3',
-            'commons-cli:commons-cli:1.3'
+            'commons-cli:commons-cli:1.3',
+            'org.tinylog:tinylog:1.1'
+    runtime 'org.tinylog:slf4j-binding:1.1'
     testCompile 'junit:junit:4.12',
-            'org.assertj:assertj-core:3.3.0',
-            'com.github.nwillc:jdk_contract_tests:1.7.5',
-            'org.mockito:mockito-core:2.0.42-beta'
+            'org.assertj:assertj-core:3.5.2',
+            'com.github.nwillc:jdk_contract_tests:1.7.6',
+            'org.mockito:mockito-core:2.1.0'
 }
 
 apply plugin: 'jacoco'
+apply plugin: 'gradle-one-jar'
 
 group = "com.github.nwillc"
 archivesBaseName = "shields"
-version = "1.2"
+version = "1.3"
 targetCompatibility = "1.8"
 sourceCompatibility = "1.8"
 
@@ -86,10 +92,9 @@ test {
     }
 }
 
-task stage(type: Copy) {
-    from sourceSets.main.runtimeClasspath
-    into 'build/staging'
-}
-
-stage.dependsOn build
 processResources.dependsOn buildInfo
+
+task oneJar(type: OneJar) {
+    mainClass = 'com.github.nwillc.shields.Shields'
+    additionalDir = file('build/resources/main')
+}
