--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,12 @@ repositories {
 dependencies {
     compile 'com.sparkjava:spark-core:2.3',
             'commons-cli:commons-cli:1.3',
-            'org.tinylog:tinylog:1.1'
-    runtime 'org.tinylog:slf4j-binding:1.1'
+            'org.tinylog:tinylog:1.2-beta-1'
+    runtime 'org.tinylog:slf4j-binding:1.2-beta-1'
     testCompile 'junit:junit:4.12',
-            'org.assertj:assertj-core:3.5.2',
-            'com.github.nwillc:jdk_contract_tests:1.7.6',
-            'org.mockito:mockito-core:2.1.0'
+            'org.assertj:assertj-core:3.6.1',
+            'com.github.nwillc:jdk_contract_tests:1.8.1',
+            'org.mockito:mockito-core:2.2.26'
 }
 
 apply plugin: 'jacoco'
@@ -55,7 +55,7 @@ apply plugin: 'gradle-one-jar'
 
 group = "com.github.nwillc"
 archivesBaseName = "shields"
-version = "1.3"
+version = "1.3.1"
 targetCompatibility = "1.8"
 sourceCompatibility = "1.8"
 
