--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
 
 plugins {
     id "java"
-    id "com.github.nwillc.vplugin" version "1.3.4"
+    id "com.github.nwillc.vplugin" version "2.0.1"
     id "com.github.nwillc.buildinfo" version "0.1.2"
 }
 
@@ -40,14 +40,14 @@ repositories {
 }
 
 dependencies {
-    compile 'com.sparkjava:spark-core:2.3',
+    compile 'com.sparkjava:spark-core:' + spark_version,
             'commons-cli:commons-cli:1.3',
             'org.tinylog:tinylog:1.2-beta-1'
     runtime 'org.tinylog:slf4j-binding:1.2-beta-1'
     testCompile 'junit:junit:4.12',
             'org.assertj:assertj-core:3.6.1',
-            'com.github.nwillc:jdk_contract_tests:1.8.1',
-            'org.mockito:mockito-core:2.2.26'
+            'com.github.nwillc:jdk_contract_tests:' + jdk_contract_tests_version,
+            'org.mockito:mockito-core:' + mockito_core_version
 }
 
 apply plugin: 'jacoco'
@@ -55,7 +55,7 @@ apply plugin: 'gradle-one-jar'
 
 group = "com.github.nwillc"
 archivesBaseName = "shields"
-version = "1.3.1"
+version = "1.3.2"
 targetCompatibility = "1.8"
 sourceCompatibility = "1.8"
 
